--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "vscode-why-this-file",
     "displayName": "vscode-why-this-file",
-    "description": "",
+    "description": "why this fie ? (find node module depends on this file)",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.46.0"
@@ -17,17 +17,19 @@
         "commands": [
             {
                 "command": "vscode-why-this-file.why",
-                "title": "find node module depends on this file"
+                "title": "why this fie ? (find node module depends on this file)"
             }
         ]
     },
     "scripts": {
         "vscode:prepublish": "yarn run compile",
-        "compile": "tsc -p ./",
+        "compile": "rollup -c rollup.config.ts",
         "lint": "eslint src --ext ts",
+        "prettier":"prettier src -w",
         "watch": "tsc -watch -p ./",
         "pretest": "yarn run compile && yarn run lint",
-        "test": "node ./out/test/runTest.js"
+        "test": "node ./out/test/runTest.js",
+        "build": "tsc -p ."
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^19.0.1",
@@ -41,6 +43,7 @@
         "@typescript-eslint/parser": "^4.28.3",
         "eslint": "^7.9.0",
         "glob": "^7.1.6",
+        "husky": "^7.0.1",
         "mocha": "^8.1.3",
         "prettier": "^2.3.2",
         "rollup": "^2.53.2",
@@ -49,10 +52,15 @@
         "vscode-test": "^1.4.0"
     },
     "dependencies": {
-        "@ad2302/why-this-file": "^1.0.0"
+        "@ad2302/why-this-file": "^1.0.1"
     },
     "publishConfig": {
         "access": "public",
         "registry": "https://registry.npmjs.com"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm test"
+        }
     }
 }
